--- a/README.Rmd
+++ b/README.Rmd
@@ -11,9 +11,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  fig.align = "center",
   out.width = "100%",
-  dpi = 300,
+  dpi = 200,
   dev = "ragg_png"
 )
 ```
@@ -75,7 +74,6 @@ We can use the `plot.msm()` function to plot survival curves from every transien
 This is denoted in the `cav` dataset by _state 4_:
 
 ```{r plot.msm}
-#| out.width = "70%"
 plot(cav.msm, from = 1:3, to = 4)
 ```
 
@@ -151,19 +149,20 @@ cav.msm.cov
 Then, we can use the same functionality as before to obtain stacked probabilities plots:
 
 ```{r stacked.plot.cov}
-stacked.plot.msm(model = cav.msm.cov, tstart = 0, tforward = 5)
+stacked.plot.msm(model = cav.msm.cov, tstart = 0, tforward = 5) +
+  labs(title = "Predictions for average covariates")
 ```
 
 By default, this will set all covariates to their average value (as in `pmatrix.msm()`); we can, however, pass specific covariates patterns that we want to predict for:
 
 ```{r stacked.plot.cov.sex0}
 stacked.plot.msm(model = cav.msm.cov, tstart = 0, tforward = 5, covariates = list(sex = 0)) +
-  labs(caption = "Predictions for 'sex = 0'")
+  labs(title = "Predictions for 'sex = 0'")
 ```
 
 ```{r stacked.plot.cov.sex1}
 stacked.plot.msm(model = cav.msm.cov, tstart = 0, tforward = 5, covariates = list(sex = 1)) +
-  labs(caption = "Predictions for 'sex = 1'")
+  labs(title = "Predictions for 'sex = 1'")
 ```
 
 This way we can provide clinically meaningful predictions that highlight the effect of covariates of interest on state occupancy probabilities over time.
