Using CRAN's URL in canonical form

--- a/README.Rmd
+++ b/README.Rmd
@@ -43,7 +43,7 @@ library(msm)
 head(cav)
 ```
 
-Further details on this example dataset are included in the [vignette of the {msm} package](https://cran.r-project.org/web/packages/msm/vignettes/msm-manual.pdf).
+Further details on this example dataset are included in the [vignette of the {msm} package](https://CRAN.R-project.org/package=msm/vignettes/msm-manual.pdf).
 
 We start by a matrix of possible transitions:
 
