--- a/README.Rmd
+++ b/README.Rmd
@@ -84,7 +84,7 @@ Say we are interested in estimating the probability of being in a given state, f
 pmatrix.msm(x = cav.msm, t = 5)
 ```
 
-This shows that, for instance, study participants in State 1 at time zero have (approximately) a 52% probability of still being in State 5 after years, 14% probability of being in State 2, 9% probability of being in State 3, and 25% probability of being in State 4.
+This shows that, for instance, study participants in State 1 at time zero have (approximately) a 52% probability of still being in State 1 after years, 14% probability of being in State 2, 9% probability of being in State 3, and 25% probability of being in State 4.
 
 We can repeatedly call the `pmatrix.msm()` function to obtain probabilities over time, but that's a bit tedious. 
 This is where the {msm.stacked} package comes in handy.
@@ -104,7 +104,7 @@ Focussing on transitions from State 1 only:
 subset(sdd, sdd$from == "State 1")
 ```
 
-Here we see, for instance, that the probability of still being in State 1, starting from State 1, is 85% after one year, 74% after two years, 65% after three years, 58% after four years, and 52% after five years:
+Here we see, for instance, that the probability of still being in State 1, starting from State 1, is (approximately) 85% after one year, 74% after two years, 65% after three years, 58% after four years, and 52% after five years:
 
 ```{r stacked.data.from1.to1}
 subset(sdd, sdd$from == "State 1" & sdd$to == "State 1")
