--- a/README.Rmd
+++ b/README.Rmd
@@ -12,8 +12,7 @@ knitr::opts_chunk$set(
   comment = "#>",
   fig.path = "man/figures/README-",
   out.width = "100%",
-  dpi = 300,
-  dev = "ragg_png"
+  dpi = 300
 )
 ```
 
@@ -58,7 +57,7 @@ twoway4.q <- rbind(
 twoway4.q
 ```
 
-This is then used to provide starting values for the model without any additional covariate:
+This is then used to provide starting values for the model without additional covariates:
 
 ```{r fit}
 cav.msm <- msm(
