--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ You can install the development version of {msm.stacked} from [GitHub](https://g
 
 ```r
 # install.packages("devtools")
-devtools::install_github("RedDoorAnalytics/msm.stacked")
+devtools::install_github("RedDoorAnalytics/msm.stacked", build_vignettes = TRUE)
 ```
 
 # Example
